End of the semaine 2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
     "files.associations": {
         "Strcasecmp.C": "cpp",
         "Palindrome.C": "cpp",
-        "ReadingArguments.C": "cpp"
+        "ReadingArguments.C": "cpp",
+        "SwapInt.C": "cpp",
+        "SwapFraction.C": "cpp"
     }
 }
